# platform.core.appfw.heynoti

./: CMakeLists.txt  SLP_Heynoti_PG.h  heynoti.c  heynoti.h  heynoti.pc.in  heynotitool.c  project.config
TC/unit/: Makefile  tslist  utc_ApplicationFW_heynoti_attach_handler_func.c  utc_ApplicationFW_heynoti_close_func.c  utc_ApplicationFW_heynoti_detach_handler_func.c  utc_ApplicationFW_heynoti_get_pnoti_name_func.c  utc_ApplicationFW_heynoti_get_snoti_name_func.c  utc_ApplicationFW_heynoti_init_func.c  utc_ApplicationFW_heynoti_poll_event_func.c  utc_ApplicationFW_heynoti_publish_func.c  utc_ApplicationFW_heynoti_subscribe_file_func.c  utc_ApplicationFW_heynoti_subscribe_func.c  utc_ApplicationFW_heynoti_unsubscribe_file_func.c  utc_ApplicationFW_heynoti_unsubscribe_func.c  utc_MODULE_API_func.c.in
debian/: changelog  control  libheynoti-0.install.in  libheynoti-0.postinst.in  libheynoti-dev.install.in  rules
include/: heynoti-internal.h  heynoti-log.h
packaging/: heynoti.changes  heynoti.spec
test/: CMakeLists.txt  tst_publish.c  tst_subscribe_ecore.c  tst_subscribe_file_mask.c  tst_subscribe_glib.c
